# Ableton-Device-Creator

./: .gitignore  ABLETON_DEVICE_CREATOR_V2_MIGRATION_PLAN.md  CLAUDE.md  DEVELOPMENT_PLAN.md  Donor Sampler Rack.adg  Donor Sampler Rack.xml  Drum Rack  Looper 1 0002 [2025-04-03 143823].xml  README.md  Single Track Ableton PROPER.xml  Single Track Ableton.als  Single Track Ableton.xml  Single Track Ableton_cleaned.als  empty-drum-rack.adg  full-drum-rack  input_rack  input_rack.adg  input_rack_scroll_19.adg  one-cell-drum-rack  one-cell-drum-rack.adg  output-drum-rack.adg  output_rack.adg  package-lock.json  package.json  pyproject.toml  readME.md  requirements.txt  sampler-rack.adg  setup.py  temp.xml  temp_template.xml  test_rack_19.adg  test_v2_migration.py
Amplified Funk Drum Racks/: Amplified Funk 01 3onIt 1.adg  Amplified Funk 02 BluOut DS 3.adg  Amplified Funk 03 ChiliBean DS 2.adg  Amplified Funk 04 DaOne 2.adg  Amplified Funk 05 Equionox 2.adg  Amplified Funk 06 Funk DS 2.adg  Amplified Funk 07 Gravy 2.adg  Amplified Funk 08 HogBear DS 1.adg  Amplified Funk 09 LuFuki .adg  Amplified Funk 10 NuBag DS 1.adg  Amplified Funk 11 Roll.adg
Simpler Examples/: simpler1.xml  simpler2.adv
archive-v2-scripts/: migrate_files.sh
docs/: CLI_GUIDE.md  README_ORGANIZATION.md  REORGANIZATION_PLAN.md
examples/: cli_demo.py  create_drum_rack_example.py  macro_mapping_example.py  sampler_example.py  test_sampler_simple.py
macro-mapping/: rename_macro_16_custom_e.py  step1_remove_macro_mapping.py  step1_remove_macro_mapping_v2.py  step2_add_cc_control.py
omnisphere/: apply_working_template.py  apply_working_template_batch.py  aupreset_automation_mapper.py  batch_additional_mappings.py  batch_orb_and_scene_mappings.py  batch_pitchbend_modifier.py  modify_arp_phase.py  nylon_sky_extractor.py  (+9 more)
(+1085 files in other folders)
